<resources>
    <string name="app_name">TP-05</string>

    <string name="title">PIL TP-5 MVVM Counter</string>
    <string name="increment_button">Increment</string>
    <string name="decrement_button">Decrement</string>
    <string name="reset_button">Reset</string>
    <string name="reset_button_text">The counter has been reset</string>
    <string name="empty_input">Error: No number entered.</string>
    <string name="input_hint">Insert a number</string>
</resources>