<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/container_margin"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/CommonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@id/counter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter"
        style="@style/Counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/input_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="54" />

    <EditText
        android:id="@+id/input_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/increment_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counter"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/increment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment_button"
        app:layout_constraintBottom_toTopOf="@id/reset_btn"
        app:layout_constraintEnd_toStartOf="@id/decrement_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_count" />

    <Button
        android:id="@+id/decrement_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrement_button"
        app:layout_constraintBottom_toTopOf="@id/reset_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/increment_btn"
        app:layout_constraintTop_toBottomOf="@id/input_count" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increment_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>